--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 			  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
 			  <a class="nav-link" href="#">Clientes</a>
 			  <a class="nav-link" href="#">Contacto</a>
-			  <a class="nav-link" href="#">Empleados</a>
+			  <a class="nav-link" href="empleados.html">Empleados</a>
 			</div>
 		  </div>
 		</div>
